# Opensoft-25-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  devdeploy.sh  docker-compose.yml  employee_data.json  output.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
app/: main.py
app/models/: user.py
app/routers/: items.py  users.py
src/: app.py  runner.py
src/analysis/: data_analyze_pipeline.py  data_sample.py  dummy_data.py  generate_data.py  question_bank_pipeline.py  tempCodeRunnerFile.py
src/analysis/data/: performance_dataset.csv  question_bank.py  question_relationships.json  question_relationships1.json  tagged_questions.json  tagged_questions1.json  vibemeter_dataset.csv
src/chatbot/: chat.py  chat_bot.py  index.py  llm_models.py  mentors.py  mentors_system_prompt.py  models.py  system_prompts.py
src/database/: graph_db.py  upload_data.py  upload_employees.py
src/models/: auth.py  dataset.py
src/routers/: admin.py  admin_analysis.py  auth.py  chat.py  common.py  data.py  employee.py  employee_analysis.py
utils/: analysis.py  api_key_rotate.py  app_logger.py  auth.py  config.py
